# waywallen

./: .gitignore  CMakeLists.txt  Cargo.toml  README.CN.md  README.md  build.rs  deps.json  environment.yml
.github/workflows/: appimage.yml
bridge/src/: bridge.c  ipc_v1.c  pool.c  pool_egl_gbm.c  pool_internal.h  pool_vulkan.c
plugins/: CMakeLists.txt
plugins/image/renderers/: waywallen-image.toml
plugins/image/src/: main.cpp  vk_producer.cpp  vk_producer.hpp
plugins/mpv/: CMakeLists.txt
plugins/mpv/renderers/: waywallen-mpv.toml
plugins/mpv/src/: main.cpp
plugins/video/renderers/: waywallen-video.toml
plugins/video/src/: main.cpp
proto/: control.proto  filter.proto
protocol/: waywallen_display_v1.xml  waywallen_ipc_v1.xml
scripts/: build_appimage.sh
src/: control.rs  control_proto.rs  dbus_iface.rs  display_endpoint.rs  display_layout.rs  display_spawner.rs  error.rs  event_process.rs  events.rs  gpu.rs  lib.rs  main.rs  media_monitor.rs  media_probe.rs  negotiate.rs  probe_task.rs  renderer_manager.rs  scheduler.rs  session_monitor.rs  settings.rs  tasks.rs  wallpaper_sort.rs  wallpaper_type.rs  ws_server.rs
src/display/: endpoint.rs  layout.rs
src/display_proto/: codec.rs  mod.rs
src/dma/: negotiate.rs
src/ipc/: uds.rs
src/model/: filter.rs  repo.rs  sync.rs
src/playlist/: filter.rs  resolve.rs  state.rs
src/plugin/: source_manager.rs  (+2 more)
tests/: display.rs  display_handshake.rs  display_sync_fd_fanout.rs  display_sync_fd_single.rs  dmabuf_roundtrip_e2e.rs  ipc_renderer.rs  ipc_renderer_handshake_cpp.rs  ipc_renderer_handshake_rust.rs  media_monitor.rs  probe_real.rs  release_syncobj_e2e.rs
ui/: CMakeLists.txt  deps.json
(+86 files in other folders)
